--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
-    "react-virtual-sky": "^0.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
