--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.0",
     "react": "^18.0.0",
+    "react-color": "^2.19.3",
     "react-d3-library": "^1.1.8",
     "react-dom": "^18.0.0",
+    "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^2.6.1",
+    "react-map-gl-geocoder": "^2.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
