--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.0",
+    "jspdf": "^2.5.1",
     "react": "^18.0.0",
     "react-color": "^2.19.3",
     "react-d3-library": "^1.1.8",
@@ -16,6 +17,7 @@
     "react-google-autocomplete": "^2.6.1",
     "react-map-gl-geocoder": "^2.2.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
