--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "sky-map",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://behnam-shahriari.github.io/sky-map",
   "dependencies": {
     "@mui/material": "^5.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.0",
+    "gh-pages": "^3.2.3",
     "jspdf": "^2.5.1",
     "react": "^18.0.0",
     "react-color": "^2.19.3",
@@ -21,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
